--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "my-app",
+  "name": "leewilliam200.github.io",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://leewilliam200.github.io",
   "dependencies": {
     "-": "0.0.1",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
-    "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.2.1",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
+    "@testing-library/jest-dom": "~5.16.3",
+    "@testing-library/react": "~12.1.4",
+    "@testing-library/user-event": "~13.5.0",
+    "bootstrap": "~5.1.3",
+    "gh-pages": "~3.2.3",
+    "react": "~17.0.2",
+    "react-bootstrap": "~2.2.1",
+    "react-dom": "~17.0.2",
+    "react-router-dom": "~6.2.2",
     "react-scripts": "5.0.0",
+    "react-vertical-timeline-component": "~3.6.0",
     "save-dev": "0.0.1-security",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "~2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
